add：新增用户删除功能
