# controller/router.go
@@ -26,8 +26,9 @@ func (r *router) InitRouter(router *gin.Engine) {
 	}).
 		POST("/login", User.Login).
 		POST("/logout", User.Logout).
-		GET("/api/v1/users", User.GetUserList).
-		GET("/api/v1/user/info", User.GetUser).
 		POST("/api/v1/user", User.AddUser).
+		GET("/api/v1/user/info", User.GetUser).
+		DELETE("/api/v1/user/:id", User.DeleteUser).
+		GET("/api/v1/users", User.GetUserList).
 		POST("/api/v1/user/avatarUpload", User.UploadAvatar)
 }
